# floorplan_annotator

./: CMakeLists.txt  package.xml
include/floorplan_annotator/: feature_detection.hpp
include/floorplan_annotator/utils/: curl_communicator.hpp  rest_communicator.hpp  rest_communicator_base.hpp
include/utils/: curl_communicator.hpp  rest_communicator.hpp  rest_communicator_base.hpp
src/: feature_detection.cpp
src/utils/: curl_communicator.cpp  rest_communicator.cpp
test/: CMakeLists.txt  detection_test.cpp  rest_test.cpp
